[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
build = "build.rs"
description = "Yandex DNS APIv2"
keywords = ["dns", "yandex", "api"]
license = "MIT"
name = "yadns"
version = "0.2.0"

[build-dependencies]

[build-dependencies.serde_codegen]
optional = true
version = "0.7.1"

[build-dependencies.syntex]
optional = true
version = "0.30.0"

[dependencies]
hyper = "0.8.0"
serde = "0.7.0"
url = "0.5.7"
serde_json = "0.7.0"

[dependencies.serde_macros]
optional = true
version = "0.7.0"

[features]
default = ["serde_codegen", "syntex"]
nightly = ["serde_macros"]
